--- a/index.html
+++ b/index.html
@@ -11,161 +11,150 @@
 
 <body>
 
-<!-- ================= HERO ================= -->
+<!-- HERO -->
 <section class="hero">
-  <div class="hero-brand">
-    <img src="novastem-logo.png" alt="NovaSTEM Logo" class="hero-logo">
-    <h1>NovaSTEM</h1>
-  </div>
+  <div class="hero-inner">
+    <div class="hero-brand">
+      <img src="novastem-logo.png" alt="NovaSTEM Logo" class="hero-logo">
+      <h1>NovaSTEM</h1>
+    </div>
 
-  <p class="hero-tagline">
-    Hands-On STEM Workshops That Turn Classrooms Into Labs
-  </p>
+    <p class="hero-tagline">
+      Hands-On STEM Workshops That Turn Classrooms Into Labs
+    </p>
 
-  <p class="hero-credibility">
-    Designed and taught by student educators · All materials provided · Free for partner schools
-  </p>
+    <p class="hero-credibility">
+      Designed and taught by student educators · All materials provided · Free for partner schools
+    </p>
 
-  <div class="hero-buttons">
-    <a href="#contact" class="btn">Bring NovaSTEM to Your School</a>
-    <a href="#how" class="btn outline">See How It Works</a>
-  </div>
+    <div class="hero-buttons">
+      <a href="#contact" class="btn">Bring NovaSTEM to Your School</a>
+      <a href="#how" class="btn outline">See How It Works</a>
+    </div>
 
-  <div class="hero-images">
-    <img src="images/home/hero-1.jpg" alt="Students running a science experiment">
-    <img src="images/home/hero-2.jpg" alt="Hands-on classroom STEM activity">
+    <div class="hero-images">
+      <img src="images/home/hero-1.jpg" alt="Students building circuits">
+      <img src="images/home/hero-2.jpg" alt="Hands-on classroom experiment">
+    </div>
   </div>
 </section>
 
-<!-- ================= IMPACT ================= -->
+<!-- IMPACT -->
 <section class="section">
-  <h2>Our Impact</h2>
-  <div class="stats">
-    <div class="stat">
-      <h3>300+</h3>
-      <p>Students Reached</p>
-    </div>
-    <div class="stat">
-      <h3>15+</h3>
-      <p>Hands-On Workshops</p>
-    </div>
-    <div class="stat">
-      <h3>Multiple</h3>
-      <p>Partner Classrooms</p>
-    </div>
-    <div class="stat">
-      <h3>100%</h3>
-      <p>Free for Schools</p>
+  <div class="container">
+    <h2>Our Impact</h2>
+    <div class="stats">
+      <div class="stat">
+        <h3>300+</h3>
+        <p>Students Reached</p>
+      </div>
+      <div class="stat">
+        <h3>15+</h3>
+        <p>Hands-On Workshops</p>
+      </div>
+      <div class="stat">
+        <h3>Multiple</h3>
+        <p>Partner Classrooms</p>
+      </div>
+      <div class="stat">
+        <h3>100%</h3>
+        <p>Free for Schools</p>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- ================= HOW IT WORKS ================= -->
+<!-- HOW IT WORKS -->
 <section id="how" class="section">
-  <h2>How It Works</h2>
-
-  <div class="steps">
-    <div class="step">
-      <h3>1. We Partner With Teachers</h3>
-      <p>We coordinate directly with educators to fit workshops into a single class period.</p>
-    </div>
-
-    <div class="step">
-      <h3>2. We Bring Everything</h3>
-      <p>All materials, equipment, and setup are handled by NovaSTEM at no cost.</p>
-    </div>
-
-    <div class="step">
-      <h3>3. Students Run Real Experiments</h3>
-      <p>Students actively build, test, observe, and experiment across STEM fields.</p>
-    </div>
-
-    <div class="step">
-      <h3>4. Learning That Sticks</h3>
-      <p>Hands-on work builds curiosity, confidence, and real understanding.</p>
+  <div class="container">
+    <h2>How It Works</h2>
+    <div class="steps">
+      <div class="step">
+        <h3>1. We Partner With Teachers</h3>
+        <p>We coordinate directly with educators to fit within a single class period.</p>
+      </div>
+      <div class="step">
+        <h3>2. We Bring Everything</h3>
+        <p>All materials, equipment, and setup are provided at no cost.</p>
+      </div>
+      <div class="step">
+        <h3>3. Students Run Real Experiments</h3>
+        <p>Students actively build, test, and observe across STEM disciplines.</p>
+      </div>
+      <div class="step">
+        <h3>4. Learning That Sticks</h3>
+        <p>Hands-on work builds confidence, curiosity, and understanding.</p>
+      </div>
     </div>
   </div>
 </section>
 
-<!-- ================= WHAT WE TEACH ================= -->
+<!-- WHAT WE TEACH -->
 <section class="section">
-  <h2>What We Teach</h2>
-
-  <div class="topics">
-    <div class="topic">• Electricity & Circuits</div>
-    <div class="topic">• Chemical Reactions</div>
-    <div class="topic">• Biology & Ecosystems</div>
-    <div class="topic">• Engineering Challenges</div>
-    <div class="topic">• Scientific Observation & Data</div>
-  </div>
-
-  <p class="section-text">
-    Workshops are age-appropriate and adapted to each classroom’s grade level.
-  </p>
-</section>
-
-<!-- ================= CLASSROOM ================= -->
-<section class="section">
-  <h2>In the Classroom</h2>
-
-  <div class="classroom-grid">
-    <div>
-      <img src="images/classroom/circuit.jpg" alt="Students building circuits">
-      <div class="caption">Students building simple circuits</div>
+  <div class="container">
+    <h2>What We Teach</h2>
+    <div class="topics">
+      <div>• Electricity & Circuits</div>
+      <div>• Chemical Reactions</div>
+      <div>• Biology & Ecosystems</div>
+      <div>• Engineering Challenges</div>
+      <div>• Scientific Observation & Data</div>
     </div>
-    <div>
-      <img src="images/classroom/chemistry.jpg" alt="Chemistry demonstration">
-      <div class="caption">Hands-on chemistry demonstration</div>
-    </div>
-    <div>
-      <img src="images/classroom/density.jpg" alt="Density experiment">
-      <div class="caption">Exploring density through real materials</div>
-    </div>
+    <p class="section-text">
+      Workshops are age-appropriate and adapted to each classroom.
+    </p>
   </div>
 </section>
 
-<!-- ================= IMPACT STATEMENT ================= -->
+<!-- CLASSROOM -->
 <section class="section">
-  <h2>Why It Matters</h2>
-  <p class="section-text">
-    Many classrooms lack the materials and time needed for hands-on science.
-    NovaSTEM removes those barriers by delivering free, experiment-based learning
-    that keeps students engaged and asking questions.
-  </p>
-
-  <p class="section-text">
-    Teachers report stronger participation, higher curiosity, and more confidence
-    in discussing scientific ideas.
-  </p>
+  <div class="container">
+    <h2>In the Classroom</h2>
+    <div class="classroom-grid">
+      <div>
+        <img src="images/classroom/circuit.jpg">
+        <div class="caption">Students building simple circuits</div>
+      </div>
+      <div>
+        <img src="images/classroom/chemistry.jpg">
+        <div class="caption">Hands-on chemistry demonstration</div>
+      </div>
+      <div>
+        <img src="images/classroom/density.jpg">
+        <div class="caption">Exploring density with real materials</div>
+      </div>
+    </div>
+  </div>
 </section>
 
-<!-- ================= FOUNDER ================= -->
-<section class="section founder">
-  <div class="founder-content">
-    <img src="founder-photo.jpg" alt="Vishay Agarwal, Founder of NovaSTEM">
+<!-- FOUNDER -->
+<section class="section">
+  <div class="container founder-content">
+    <img src="founder-photo.jpg" alt="Vishay Agarwal">
     <div>
       <h2>About the Founder</h2>
       <p class="section-text">
         NovaSTEM was founded by Vishay Agarwal, a student passionate about making
         high-quality STEM education accessible early. With a background in computer
-        science, research, and outreach, he started NovaSTEM to bring real experiments
-        into real classrooms — especially where resources are limited.
+        science, research, and outreach, he created NovaSTEM to bring real experiments
+        into real classrooms.
       </p>
     </div>
   </div>
 </section>
 
-<!-- ================= FINAL CTA ================= -->
+<!-- FINAL CTA -->
 <section id="contact" class="section">
-  <h2>Let’s Bring STEM to Your Classroom</h2>
-  <p class="section-text">
-    Interested in hosting a NovaSTEM workshop or partnering with us? Reach out below.
-  </p>
-
-  <div class="contact-buttons">
-    <a href="mailto:v.agrwl17@email.com" class="btn">Email</a>
-    <a href="https://vishay-portfolio.vercel.app" target="_blank" class="btn outline">Website</a>
-    <a href="https://docs.google.com/document/d/1WzZJZBH80DKdhlGDDp_C0U5lvuMLdMok/edit" target="_blank" class="btn outline">Resume</a>
+  <div class="container">
+    <h2>Let’s Bring STEM to Your Classroom</h2>
+    <p class="section-text">
+      Interested in hosting a workshop or partnering with NovaSTEM?
+    </p>
+    <div class="contact-buttons">
+      <a href="mailto:v.agrwl17@email.com" class="btn">Email</a>
+      <a href="https://vishay-portfolio.vercel.app" class="btn outline">Website</a>
+      <a href="https://docs.google.com/document/d/1WzZJZBH80DKdhlGDDp_C0U5lvuMLdMok/edit" class="btn outline">Resume</a>
+    </div>
   </div>
 </section>
 
