Add science lessons base

--- a/lesson.html
+++ b/lesson.html
@@ -120,6 +120,54 @@ const lessons = {
       "Conditional logic helps algorithms make decisions. " +
       "Clear if/then reasoning prevents mistakes."
   }
+  "science-observation-1": {
+  title: "Observation",
+  subtitle: "Noticing patterns and details",
+  prompt:
+    "Look around your room or outside a window. " +
+    "Describe three things you observe without explaining why they happen.",
+  hints: [
+    "Focus on what you see, not why it happens.",
+    "Avoid using words like 'because'.",
+    "Be specific and detailed."
+  ],
+  feedback:
+    "Good observations describe details without assumptions. " +
+    "Scientists observe carefully before forming explanations."
+},
+
+"science-cause-effect-1": {
+  title: "Cause & Effect",
+  subtitle: "Understanding how changes affect outcomes",
+  prompt:
+    "Imagine a plant placed in sunlight versus shade. " +
+    "Explain what might change and why.",
+  hints: [
+    "What is changing?",
+    "What stays the same?",
+    "How might the change affect the result?"
+  ],
+  feedback:
+    "Cause and effect reasoning helps scientists test ideas " +
+    "by focusing on how one change influences another."
+},
+
+"science-systems-1": {
+  title: "Systems & Evidence",
+  subtitle: "Understanding connected parts",
+  prompt:
+    "Describe a system you use every day (like a school or ecosystem). " +
+    "Explain how different parts work together.",
+  hints: [
+    "What are the main parts?",
+    "How do the parts interact?",
+    "What happens if one part changes?"
+  ],
+  feedback:
+    "Systems thinking helps scientists understand complex interactions " +
+    "and use evidence to explain outcomes."
+}
+
 };
 
 /* ===============================
@@ -176,3 +224,4 @@ function checkReasoning() {
 
 </body>
 </html>
+
